# python-project-lvl1

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pplvl1.yml  python-project-lvl1.yml
brain_games/: __init__.py  cli.py  engine.py  even_game_logics.py  exceptions.py  game_logics.py  log_config.py
brain_games/games/: calc_game.py  calc_game_logics.py  even_game.py  even_game_logics.py  gcd_game.py  gcd_game_logics.py  prime_game.py  prime_game_logics.py  progression_game.py  progression_game_logics.py
brain_games/scripts/: __init__.py  brain_calc.py  brain_even.py  brain_games.py  brain_gcd.py  brain_prime.py  brain_progression.py
