[tool.poetry]
name = "brain_games"
version = "0.1.0"
description = "Five games that test basic math knowledge."
authors = ["sudobooo <marsdoghelena@gmail.com>"]
repository = "https://github.com/sudobooo/brain-games"
classifiers = [
    "Topic :: Games/Entertainment :: Puzzle Games",
]
packages = [
  { include = "brain_games" },
]

[tool.poetry.dependencies]
python = "^3.10.5"
prompt = "^0.4.1"

[tool.poetry.scripts]
brain-games = "brain_games.scripts.brain_games:main"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"

[tool.isort]
skip = ["brain_games",]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
